# ai-assistant-workspace

./: AGENTS.md  BOOTSTRAP.md  README.md
skills/arxiv/: SKILL.md
skills/arxiv/scripts/: arxiv_fetcher.py  arxiv_tool.py  pyproject.toml
skills/calendar/: SKILL.md
skills/cat-diary/: SKILL.md
skills/code-reviewer/: SKILL.md
skills/code-reviewer/templates/: review-prompt.md
skills/diary/: SKILL.md
skills/github-repo-analyzer/: SKILL.md
skills/health-advisor/: SKILL.md
skills/marp-slides/: SKILL.md
skills/note-taking/: SKILL.md
skills/notion-manager/: SKILL.md
skills/podcast/: SKILL.md
skills/skill-creator/: SKILL.md
skills/spontaneous-talk/: SKILL.md
skills/tech-news-curation/: SKILL.md
skills/transcriber/: SKILL.md
skills/workspace-rag/: SKILL.md
skills/workspace-rag/scripts/: pyproject.toml  start_server.sh  workspace_rag.py  workspace_rag_server.py
skills/xangi-settings/: SKILL.md
skills/youtube-notes/: SKILL.md
